[package]
name = "ullun-api"
version = "0.2.0"
edition = "2021"
authors = ["yedoma-labs"]
description = "Express.js-inspired web framework for Rust - simple, fast, batteries-included"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yedoma-labs/ullun-api"
homepage = "https://github.com/yedoma-labs/ullun-api"
documentation = "https://docs.rs/ullun-api"
readme = "README.md"
keywords = ["web", "framework", "api", "microservices", "http"]
categories = ["web-programming::http-server"]
exclude = [
    ".github/*",
    ".dockerignore",
    "Dockerfile",
    "target/*",
]

[dependencies]
# Core HTTP
http = "1.4"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Routing
matchit = "0.9"

# Error handling
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# HTTP types
bytes = "1.11"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[[bench]]
name = "router_benchmark"
harness = false

[lib]
name = "ullun"
path = "src/lib.rs"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "full_api"
path = "examples/full_api.rs"

[[example]]
name = "todo_api"
path = "examples/todo_api.rs"
